--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/humps": "^2.0.0",
     "axios": "^0.20.0",
     "firebase": "^7.21.0",
+    "framer-motion": "^2.9.4",
     "humps": "^2.0.1",
     "localforage": "^1.9.0",
     "next": "9.4.4",
